Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,14 +46,396 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# import statements\n",
+    "import sqlite3\n",
+    "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a connection\n",
+    "con = sqlite3.connect('Walmart.db')\n",
+    "#Create a cursor\n",
+    "cur = con.cursor()\n",
+    "#Select some data\n",
+    "# cur.execute(\"\"\"\"\"\")\n",
+    "# df = pd.DataFrame(cur.fetchall())\n",
+    "# df.columns = [i[0] for i in cur.description]\n",
+    "# print(df.shape)\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sql_select_to_df(SQL_COMMAND, cur=cur):\n",
+    "    results = cur.execute(SQL_COMMAND).fetchall()\n",
+    "    df = pd.DataFrame(results)\n",
+    "    df.columns = [i[0] for i in cur.description]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Dept</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>IsHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.50</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>46039.49</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-19</td>\n",
+       "      <td>41595.55</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-26</td>\n",
+       "      <td>19403.54</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-05</td>\n",
+       "      <td>21827.90</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store  Dept        Date  Weekly_Sales IsHoliday\n",
+       "0      1     1  2010-02-05      24924.50     False\n",
+       "1      1     1  2010-02-12      46039.49      True\n",
+       "2      1     1  2010-02-19      41595.55     False\n",
+       "3      1     1  2010-02-26      19403.54     False\n",
+       "4      1     1  2010-03-05      21827.90     False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql_select_to_df(\"\"\"SELECT * FROM sales;\"\"\").head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merge walmart db\n",
+    "walmart_df = sql_select_to_df(\"\"\"SELECT * FROM sales \n",
+    "                            JOIN store_details\n",
+    "                            using('Store')\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import csv\n",
+    "economy_df = pd.read_csv('economy_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "143"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "walmart_df['Date'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msd = walmart_df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store_x</th>\n",
+       "      <th>Dept</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>IsHoliday_x</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Store_y</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "      <th>MarkDown1</th>\n",
+       "      <th>MarkDown2</th>\n",
+       "      <th>MarkDown3</th>\n",
+       "      <th>MarkDown4</th>\n",
+       "      <th>MarkDown5</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Unemployment</th>\n",
+       "      <th>IsHoliday_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40.19</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>210.752605</td>\n",
+       "      <td>8.324</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>3</td>\n",
+       "      <td>45.71</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>214.424881</td>\n",
+       "      <td>7.368</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>4</td>\n",
+       "      <td>43.76</td>\n",
+       "      <td>2.598</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>126.442065</td>\n",
+       "      <td>8.623</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>5</td>\n",
+       "      <td>39.70</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.653972</td>\n",
+       "      <td>6.566</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store_x  Dept        Date  Weekly_Sales IsHoliday_x Type    Size  Store_y  \\\n",
+       "0        1     1  2010-02-05       24924.5       False    A  151315        1   \n",
+       "1        1     1  2010-02-05       24924.5       False    A  151315        2   \n",
+       "2        1     1  2010-02-05       24924.5       False    A  151315        3   \n",
+       "3        1     1  2010-02-05       24924.5       False    A  151315        4   \n",
+       "4        1     1  2010-02-05       24924.5       False    A  151315        5   \n",
+       "\n",
+       "   Temperature  Fuel_Price  MarkDown1  MarkDown2  MarkDown3  MarkDown4  \\\n",
+       "0        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "1        40.19       2.572        NaN        NaN        NaN        NaN   \n",
+       "2        45.71       2.572        NaN        NaN        NaN        NaN   \n",
+       "3        43.76       2.598        NaN        NaN        NaN        NaN   \n",
+       "4        39.70       2.572        NaN        NaN        NaN        NaN   \n",
+       "\n",
+       "   MarkDown5         CPI  Unemployment  IsHoliday_y  \n",
+       "0        NaN  211.096358         8.106        False  \n",
+       "1        NaN  210.752605         8.324        False  \n",
+       "2        NaN  214.424881         7.368        False  \n",
+       "3        NaN  126.442065         8.623        False  \n",
+       "4        NaN  211.653972         6.566        False  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msd.merge(economy_df,on='Store').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -80,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
