Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
     }
    ],
    "source": [
-    "msd.merge(economy_df,on='Store').head()"
+    "msd.merge(economy_df,on=['Store']).head()"
    ]
   },
   {
