--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
     }
    ],
    "source": [
-    "pd.merge(economy_df,on=['Store','']).head()"
+    "pd.merge(msd,economy_df,on=['Store','']).head()"
    ]
   },
   {
