--- a/index.ipynb
+++ b/index.ipynb
@@ -208,22 +208,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "      <th>MarkDown1</th>\n",
+       "      <th>MarkDown2</th>\n",
+       "      <th>MarkDown3</th>\n",
+       "      <th>MarkDown4</th>\n",
+       "      <th>MarkDown5</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Unemployment</th>\n",
+       "      <th>IsHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>38.51</td>\n",
+       "      <td>2.548</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.242170</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-19</td>\n",
+       "      <td>39.93</td>\n",
+       "      <td>2.514</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.289143</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-26</td>\n",
+       "      <td>46.63</td>\n",
+       "      <td>2.561</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.319643</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-05</td>\n",
+       "      <td>46.50</td>\n",
+       "      <td>2.625</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.350143</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "143"
+       "   Store        Date  Temperature  Fuel_Price  MarkDown1  MarkDown2  \\\n",
+       "0      1  2010-02-05        42.31       2.572        NaN        NaN   \n",
+       "1      1  2010-02-12        38.51       2.548        NaN        NaN   \n",
+       "2      1  2010-02-19        39.93       2.514        NaN        NaN   \n",
+       "3      1  2010-02-26        46.63       2.561        NaN        NaN   \n",
+       "4      1  2010-03-05        46.50       2.625        NaN        NaN   \n",
+       "\n",
+       "   MarkDown3  MarkDown4  MarkDown5         CPI  Unemployment  IsHoliday  \n",
+       "0        NaN        NaN        NaN  211.096358         8.106      False  \n",
+       "1        NaN        NaN        NaN  211.242170         8.106       True  \n",
+       "2        NaN        NaN        NaN  211.289143         8.106      False  \n",
+       "3        NaN        NaN        NaN  211.319643         8.106      False  \n",
+       "4        NaN        NaN        NaN  211.350143         8.106      False  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "econom['Date'].head()"
+    "economy_df.head()"
    ]
   },
   {
