--- a/index.ipynb
+++ b/index.ipynb
@@ -545,7 +545,7 @@
     }
    ],
    "source": [
-    "pd.merge(msd,economy_df,on=['Store','']).head()"
+    "pd.merge(msd,economy_df,on=['Store']).head()"
    ]
   },
   {
