--- a/index.ipynb
+++ b/index.ipynb
@@ -208,22 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8190"
+       "452192"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(economy_df.index)"
+    "len(walmart_df.index)"
    ]
   },
   {
