--- a/index.ipynb
+++ b/index.ipynb
@@ -208,22 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "452192"
+       "8190"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(economy_df.index)"
+    "len(economy_df['date]'.)"
    ]
   },
   {
