--- a/index.ipynb
+++ b/index.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -494,14 +494,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Store_x</th>\n",
+       "      <th>Store</th>\n",
        "      <th>Dept</th>\n",
        "      <th>Date</th>\n",
        "      <th>Weekly_Sales</th>\n",
        "      <th>IsHoliday_x</th>\n",
        "      <th>Type</th>\n",
        "      <th>Size</th>\n",
-       "      <th>Store_y</th>\n",
        "      <th>Temperature</th>\n",
        "      <th>Fuel_Price</th>\n",
        "      <th>MarkDown1</th>\n",
@@ -520,11 +519,10 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2010-02-05</td>\n",
-       "      <td>24924.5</td>\n",
+       "      <td>24924.50</td>\n",
        "      <td>False</td>\n",
        "      <td>A</td>\n",
        "      <td>151315</td>\n",
-       "      <td>1</td>\n",
        "      <td>42.31</td>\n",
        "      <td>2.572</td>\n",
        "      <td>NaN</td>\n",
@@ -539,85 +537,81 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2010-02-05</td>\n",
-       "      <td>24924.5</td>\n",
+       "      <td>50605.27</td>\n",
        "      <td>False</td>\n",
        "      <td>A</td>\n",
        "      <td>151315</td>\n",
-       "      <td>2</td>\n",
-       "      <td>40.19</td>\n",
+       "      <td>42.31</td>\n",
        "      <td>2.572</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>210.752605</td>\n",
-       "      <td>8.324</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2010-02-05</td>\n",
-       "      <td>24924.5</td>\n",
+       "      <td>13740.12</td>\n",
        "      <td>False</td>\n",
        "      <td>A</td>\n",
        "      <td>151315</td>\n",
-       "      <td>3</td>\n",
-       "      <td>45.71</td>\n",
+       "      <td>42.31</td>\n",
        "      <td>2.572</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>214.424881</td>\n",
-       "      <td>7.368</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-02-05</td>\n",
-       "      <td>24924.5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
        "      <td>4</td>\n",
-       "      <td>43.76</td>\n",
-       "      <td>2.598</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>126.442065</td>\n",
-       "      <td>8.623</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>2010-02-05</td>\n",
-       "      <td>24924.5</td>\n",
+       "      <td>39954.04</td>\n",
        "      <td>False</td>\n",
        "      <td>A</td>\n",
        "      <td>151315</td>\n",
-       "      <td>5</td>\n",
-       "      <td>39.70</td>\n",
+       "      <td>42.31</td>\n",
        "      <td>2.572</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>211.653972</td>\n",
-       "      <td>6.566</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>32229.38</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -625,29 +619,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Store_x  Dept        Date  Weekly_Sales IsHoliday_x Type    Size  Store_y  \\\n",
-       "0        1     1  2010-02-05       24924.5       False    A  151315        1   \n",
-       "1        1     1  2010-02-05       24924.5       False    A  151315        2   \n",
-       "2        1     1  2010-02-05       24924.5       False    A  151315        3   \n",
-       "3        1     1  2010-02-05       24924.5       False    A  151315        4   \n",
-       "4        1     1  2010-02-05       24924.5       False    A  151315        5   \n",
+       "   Store  Dept        Date  Weekly_Sales IsHoliday_x Type    Size  \\\n",
+       "0      1     1  2010-02-05      24924.50       False    A  151315   \n",
+       "1      1     2  2010-02-05      50605.27       False    A  151315   \n",
+       "2      1     3  2010-02-05      13740.12       False    A  151315   \n",
+       "3      1     4  2010-02-05      39954.04       False    A  151315   \n",
+       "4      1     5  2010-02-05      32229.38       False    A  151315   \n",
        "\n",
        "   Temperature  Fuel_Price  MarkDown1  MarkDown2  MarkDown3  MarkDown4  \\\n",
        "0        42.31       2.572        NaN        NaN        NaN        NaN   \n",
-       "1        40.19       2.572        NaN        NaN        NaN        NaN   \n",
-       "2        45.71       2.572        NaN        NaN        NaN        NaN   \n",
-       "3        43.76       2.598        NaN        NaN        NaN        NaN   \n",
-       "4        39.70       2.572        NaN        NaN        NaN        NaN   \n",
+       "1        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "2        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "3        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "4        42.31       2.572        NaN        NaN        NaN        NaN   \n",
        "\n",
        "   MarkDown5         CPI  Unemployment  IsHoliday_y  \n",
        "0        NaN  211.096358         8.106        False  \n",
-       "1        NaN  210.752605         8.324        False  \n",
-       "2        NaN  214.424881         7.368        False  \n",
-       "3        NaN  126.442065         8.623        False  \n",
-       "4        NaN  211.653972         6.566        False  "
+       "1        NaN  211.096358         8.106        False  \n",
+       "2        NaN  211.096358         8.106        False  \n",
+       "3        NaN  211.096358         8.106        False  \n",
+       "4        NaN  211.096358         8.106        False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
