--- a/index.ipynb
+++ b/index.ipynb
@@ -378,22 +378,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Dept</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>IsHoliday</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.50</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>46039.49</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-19</td>\n",
+       "      <td>41595.55</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-26</td>\n",
+       "      <td>19403.54</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-05</td>\n",
+       "      <td>21827.90</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "452192"
+       "   Store  Dept        Date  Weekly_Sales IsHoliday Type    Size\n",
+       "0      1     1  2010-02-05      24924.50     False    A  151315\n",
+       "1      1     1  2010-02-12      46039.49      True    A  151315\n",
+       "2      1     1  2010-02-19      41595.55     False    A  151315\n",
+       "3      1     1  2010-02-26      19403.54     False    A  151315\n",
+       "4      1     1  2010-03-05      21827.90     False    A  151315"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(walmart_df.index)"
+    "walmart_df.head()"
    ]
   },
   {
@@ -577,7 +665,7 @@
     }
    ],
    "source": [
-    "len(pd.merge(msd,economy_df,on=['Store','Date']).index)"
+    "pd.merge(msd,economy_df,on=['Store','Date']).index"
    ]
   },
   {
