Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -665,7 +665,7 @@
     }
    ],
    "source": [
-    "pd.merge(msd,economy_df,on=['Store','Date']).index"
+    "msd = merge(walmart_df,economy_df,on=['Store','Date']).index"
    ]
   },
   {
