Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -650,22 +650,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "452192"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "msd = merge(walmart_df,economy_df,on=['Store','Date']).index"
+    "msd = pd.merge(walmart_df,economy_df,on=['Store','Date'])"
    ]
   },
   {
@@ -673,7 +662,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "msd.head()"
+   ]
   },
   {
    "cell_type": "code",
