--- a/index.ipynb
+++ b/index.ipynb
@@ -661,9 +661,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "msd.head()"
+    "msd['Dept'].nunique()"
    ]
   },
   {
