--- a/index.ipynb
+++ b/index.ipynb
@@ -659,22 +659,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Dept</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>IsHoliday_x</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "      <th>MarkDown1</th>\n",
+       "      <th>MarkDown2</th>\n",
+       "      <th>MarkDown3</th>\n",
+       "      <th>MarkDown4</th>\n",
+       "      <th>MarkDown5</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Unemployment</th>\n",
+       "      <th>IsHoliday_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.50</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>50605.27</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>13740.12</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>39954.04</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>32229.38</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "81"
+       "   Store  Dept        Date  Weekly_Sales IsHoliday_x Type    Size  \\\n",
+       "0      1     1  2010-02-05      24924.50       False    A  151315   \n",
+       "1      1     2  2010-02-05      50605.27       False    A  151315   \n",
+       "2      1     3  2010-02-05      13740.12       False    A  151315   \n",
+       "3      1     4  2010-02-05      39954.04       False    A  151315   \n",
+       "4      1     5  2010-02-05      32229.38       False    A  151315   \n",
+       "\n",
+       "   Temperature  Fuel_Price  MarkDown1  MarkDown2  MarkDown3  MarkDown4  \\\n",
+       "0        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "1        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "2        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "3        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "4        42.31       2.572        NaN        NaN        NaN        NaN   \n",
+       "\n",
+       "   MarkDown5         CPI  Unemployment  IsHoliday_y  \n",
+       "0        NaN  211.096358         8.106        False  \n",
+       "1        NaN  211.096358         8.106        False  \n",
+       "2        NaN  211.096358         8.106        False  \n",
+       "3        NaN  211.096358         8.106        False  \n",
+       "4        NaN  211.096358         8.106        False  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "msd['Dept'].nunique()"
+    "msd.head()"
    ]
   },
   {
