Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -423,27 +423,7 @@
        "      <td>151315</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30622</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-02-05</td>\n",
-       "      <td>24924.50</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>143</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2010-02-05</td>\n",
-       "      <td>50605.27</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30765</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2010-02-05</td>\n",
@@ -462,26 +442,46 @@
        "      <td>A</td>\n",
        "      <td>151315</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>39954.04</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>32229.38</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Store  Dept        Date  Weekly_Sales IsHoliday Type    Size\n",
-       "0          1     1  2010-02-05      24924.50     False    A  151315\n",
-       "30622      1     1  2010-02-05      24924.50     False    A  151315\n",
-       "143        1     2  2010-02-05      50605.27     False    A  151315\n",
-       "30765      1     2  2010-02-05      50605.27     False    A  151315\n",
-       "286        1     3  2010-02-05      13740.12     False    A  151315"
+       "     Store  Dept        Date  Weekly_Sales IsHoliday Type    Size\n",
+       "0        1     1  2010-02-05      24924.50     False    A  151315\n",
+       "143      1     2  2010-02-05      50605.27     False    A  151315\n",
+       "286      1     3  2010-02-05      13740.12     False    A  151315\n",
+       "429      1     4  2010-02-05      39954.04     False    A  151315\n",
+       "572      1     5  2010-02-05      32229.38     False    A  151315"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "walmart_df.sort_values(['Date','Store','Store']).head()"
+    "walmart_df.sort_values(['Date','Store']).head()"
    ]
   },
   {
