Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -844,7 +844,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "msd.to_csv('Merged_Sales_ata.csv', index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
