Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -845,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msd.to_csv('Merged_Sales_ata.csv', index=False)"
+    "msd.to_csv('Merged_Store_Data.csv', index=False)"
    ]
   },
   {
